--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Guillaume Diallo-Mulliez
-	email = guillaumedm@bamlab.fr
+	email = guillaumedm@bam.tech
 
 
 [alias]
@@ -185,3 +185,10 @@
 [url "git://gist.github.com/"]
 
 	insteadOf = "gist:"
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+[init]
+	defaultBranch = main
